@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-10-14T16:27:37Z",
-  "count_outdated" : 581,
-  "uniques_outdated" : 333,
-  "count" : 603,
+  "timestamp" : "2022-10-15T01:54:24Z",
+  "count_outdated" : 584,
+  "uniques_outdated" : 334,
+  "count" : 606,
   "uniques" : 345,
   "clones" : [
-    {
-      "timestamp": "2022-09-30T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-10-01T00:00:00Z",
       "count": 6,
@@ -63,8 +56,8 @@
     },
     {
       "timestamp": "2022-10-14T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
+      "count": 3,
+      "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
