@@ -1,3 +1,11 @@
+2022-10-15T01:54:24Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3254014418 # 936
+* notice: last 14d: unq all: 5 22
+* notice: prev accum: outdated-unq outdated-all / unq all: 333 581 / 345 603
+* notice: next accum: outdated-unq outdated-all / unq all: 334 584 / 345 606
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +3 -0 -0 / 1 3
+* notice: removed / changed dates: [2022-09-30] / [2022-10-14]
+
 2022-10-14T16:27:37Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3251466839 # 935
 * notice: last 14d: unq all: 5 22
